@@ -10,6 +10,14 @@ Corregir speech menus:
 
 Esto hacerlo en stdout y menu normal. En decir linea entera y en active item. Funcion solo para esto y que no se use en otros sitios
 
+-Emular 1024 kB de modo pentagon. Bit 5 de 7ffd y puerto eff7
+
+https://zx-pk.ru/archive/index.php/t-11490.html
+
+Lógicamente asignar 512kb más de ram al iniciar y generar tablas de memoria de paginación 
+Tener en cuenta que bit de bloqueo de paginacion no funcionara cuando esté activado 1024 kb
+
+
 
 -tamanyos ventanas menus:
 si menu genera ventana de 24 lineas o mas, da error de zx vision por ventana fuera de rango
